Add configuration support to canny_edge_detection.py. Modify config source path in image_slicer.py

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -1,4 +1,10 @@
 [IMAGE_SLICER]
 source_path = ../ortofoto
-destination_path_without_size = ../sliced_raw
+destination_path_without_param = ../sliced_raw
 size = 640
+
+[CANNY_EDGE_DETECTION]
+source_path = ../sliced_raw_640
+destination_path_without_param = ../canny_edges
+low_threshold = 0
+high_threshold = 255
