Add configuration suport to image_histogram.py. Add tqdm progression bar.

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -8,3 +8,7 @@ source_path = ../sliced_raw_640
 destination_path_without_param = ../canny_edges
 low_threshold = 0
 high_threshold = 255
+
+[IMAGE_HISTOGRAM]
+source_path = ../sliced_raw_640
+destination_path_without_param = ../histograms
