Update folder structure

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -5,10 +5,16 @@ size = 640
 
 [CANNY_EDGE_DETECTION]
 source_path = ../sliced_raw_640
-destination_path_without_param = ../canny_edges
+destination_path_without_param = ../canny_edges_640
 low_threshold = 0
 high_threshold = 255
 
 [IMAGE_HISTOGRAM]
 source_path = ../sliced_raw_640
-destination_path_without_param = ../histograms
+destination_path_without_param = ../histograms_640
+
+[NOISE_REMOVER]
+source_path = ../sliced_raw_640
+destination_path_without_param = ../denoised_640
+dilate_iterations = 4
+erode_iterations = 10
