--- a/preprocessing.config
+++ b/preprocessing.config
@@ -14,7 +14,7 @@ source_path = ../sliced_raw_640
 destination_path_without_param = ../histograms_640
 
 [NOISE_REMOVER]
-source_path = ../sliced_raw_640
+source_path = ../canny_edges_640_0_255
 destination_path_without_param = ../denoised_640
 dilate_iterations = 4
 erode_iterations = 10
