Add combiner algorithm of raw and edge images

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -18,3 +18,8 @@ source_path = ../canny_edges_640_0_255
 destination_path_without_param = ../denoised_640
 dilate_iterations = 4
 erode_iterations = 10
+
+[COMBINE_RAW_WITH_EDGES]
+source_path_raw = ../sliced_raw_640
+source_path_edge = ../denoised_640_4_10
+destination_path_without_param = ../combined_640
