Update config file

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -23,3 +23,10 @@ erode_iterations = 10
 source_path_raw = ../sliced_raw_640
 source_path_edge = ../denoised_640_4_10
 destination_path_without_param = ../combined_640
+
+[COPY_FILTERED_TO_SERIALIZE]
+source_path_raw = ../serialize_raw_640
+source_path_denoised = ../denoised_640_4_10
+source_path_combined = ../combined_640
+destination_path_denoised = ../serialize_denoised_640
+destination_path_combined = ../serialize_combined_640
