Add image normalization algorithm

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -3,6 +3,10 @@ source_path = ../ortofoto
 destination_path_without_param = ../sliced_raw
 size = 640
 
+[NORMALIZATION]
+source_path_raw = ../sliced_raw_640
+source_path_edge = ../normalized_640
+
 [CANNY_EDGE_DETECTION]
 source_path = ../sliced_raw_640
 destination_path_without_param = ../canny_edges_640
@@ -23,6 +27,10 @@ erode_iterations = 10
 source_path_raw = ../sliced_raw_640
 source_path_edge = ../denoised_640_4_10
 destination_path_without_param = ../combined_640
+
+[NORMALIZATION]
+source_path_raw = ../sliced_raw_640
+source_path_edge = ../normalized_640
 
 [COPY_FILTERED_TO_SERIALIZE]
 source_path_raw = ../serialize_raw_640
