Add grayscale images and add tfrecords for rooftop colors.

--- a/preprocessing.config
+++ b/preprocessing.config
@@ -28,9 +28,9 @@ source_path_raw = ../sliced_raw_640
 source_path_edge = ../denoised_640_4_10
 destination_path_without_param = ../combined_640
 
-[NORMALIZATION]
+[GRAY_SCALE]
 source_path_raw = ../sliced_raw_640
-source_path_edge = ../normalized_640
+destination_path_without_param = ../gray_scale_640
 
 [COPY_FILTERED_TO_SERIALIZE]
 source_path_raw = ../serialize_raw_640
