--- a/preprocessing.config
+++ b/preprocessing.config
@@ -38,3 +38,8 @@ source_path_denoised = ../denoised_640_4_10
 source_path_combined = ../combined_640
 destination_path_denoised = ../serialize_denoised_640
 destination_path_combined = ../serialize_combined_640
+
+[TF_RECORDS_CLASSES]
+one_label = building
+b_sm_c = building,small_building,car
+roof_top_colors = black_top_house,white_top_house,red_top_house
